@startuml state-phase
title Enclave key-state machine (state.rs :: Phase)

skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontName "JetBrains Mono"
skinparam defaultFontSize 12
skinparam state {
  BorderColor #355680
  BackgroundColor #FAFAFA
  FontStyle bold
  ArrowColor #355680
}

[*] --> Initial : enclave boot\n(no key material)

state Initial {
  Initial : signing DISABLED
  Initial : get_keys() -> KeyNotInitialized
}

state Cloning {
  Cloning : holds CloningSession\n(ephemeral X25519 + cluster pubkey)
  Cloning : signing DISABLED
}

state Active {
  Active : holds Box<KeyManager>\n(seed in SecretBox)
  Active : signing ENABLED
  Active : get_keys() / sign_evm / sign_psbt OK
}

Initial --> Active  : initialize_from_entropy()\n(first enclave -- OS entropy)
Initial --> Active  : initialize_from_seed/mnemonic()\n(feature: allow-seed-import -- dev only)
Initial --> Cloning : begin_cloning()\n(InitiateCloning -- requester)

Cloning --> Active  : complete_cloning()\n(SetClone -- decrypt + install peer seed,\nassert evm_address == cluster_public_key)

Active --> Active   : SignEvm / SignPsbt / GetAttestedPublicKey\n(no state change)
Active --> Active   : GetClone (donor -- exports sealed seed,\nstays Active)

note bottom of Active
  Active is terminal. There is no transition out of Active:
  no re-init, no re-clone, no key rotation in-place.
  ensure_initial() rejects any second initialize attempt
  with AlreadyInitialized. Upgrades/rotation happen by
  standing up a NEW cluster (new PCRs) -- never by mutating
  an Active enclave (spec Sec 16.5).
end note

@enduml
